--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="sidebar">
       <a href="#" class="logo">
         <i class="bx bx-code-alt"></i>
-        <div class="logo-name"><span>Congwei</span>Huang</div>
+        <div class="logo-name"><span>Congw</span>741</div>
       </a>
       <ul class="side-menu">
         <li>
@@ -43,8 +43,42 @@
         </li>
       </ul>
     </div>
-
     <!-- End of Sidebar -->
+
+    <!-- Main Content -->
+    <div class="content">
+      <!-- Navbar -->
+      <nav>
+        <i class="bx bx-menu"></i>
+        <form action="#">
+          <div class="form-input">
+            <input type="search" placeholder="Search..." />
+            <button class="search-btn" type="submit">
+              <i class="bx bx-search"></i>
+            </button>
+          </div>
+        </form>
+        <input type="checkbox" id="theme-toggle" hidden />
+        <label for="theme-toggle" class="theme-toggle"></label>
+        <a href="#" class="notif">
+          <i class="bx bx-bell"></i>
+          <span class="count">12</span>
+        </a>
+        <a href="#" class="profile">
+          <img src="./img/profile.jpg" alt="profile" />
+        </a>
+      </nav>
+      <!-- End of navbar -->
+
+      <main>
+        <div class="header">
+          <div class="left">
+            <h1>Dashboard</h1>
+          </div>
+        </div>
+      </main>
+    </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
