--- a/index.html
+++ b/index.html
@@ -74,8 +74,50 @@
         <div class="header">
           <div class="left">
             <h1>Dashboard</h1>
+            <ul class="breadcrumb">
+              <li><a href="#">Analytics</a></li>
+              /
+              <li><a href="#" class="active">Shop</a></li>
+            </ul>
           </div>
+          <a href="#" class="report">
+            <i class="bx bx-cloud-download"></i>
+            <span>Download CSV</span>
+          </a>
         </div>
+
+        <!-- Insights -->
+        <ul class="insights">
+          <li>
+            <i class="bx bx-calendar-check"></i>
+            <span class="info">
+              <h3>1,074</h3>
+              <p>Paid Order</p>
+            </span>
+          </li>
+          <li>
+            <i class="bx bx-show-alt"></i>
+            <span class="info">
+              <h3>3,944</h3>
+              <p>Site Visit</p>
+            </span>
+          </li>
+          <li>
+            <i class="bx bx-line-chart"></i>
+            <span class="info">
+              <h3>14,712</h3>
+              <p>Searches</p>
+            </span>
+          </li>
+          <li>
+            <i class="bx bx-dollar-circle"></i>
+            <span class="info">
+              <h3>$6,742</h3>
+              <p>Total Sales</p>
+            </span>
+          </li>
+        </ul>
+        <!-- End of Insights -->
       </main>
     </div>
 
